--- a/LAMP/css/main.css
+++ b/LAMP/css/main.css
@@ -1,10 +1,9 @@
 html {
-    background-color:tan;
+    background-color:azure;
 }
 
 body {
     background-color: white;
-    border: 10px solid gold;
     padding: 3rem;
     margin: auto;
     margin-top: 20px;
