--- a/LAMP/css/main.css
+++ b/LAMP/css/main.css
@@ -3,9 +3,10 @@ html {
 }
 
 body {
-    background-color: white;
+    background-color: lemonchiffon;
+
     padding: 3rem;
-    margin: auto;
+    margin: center;
     margin-top: 20px;
 }
 
