--- a/mobile_dev-starter/styles/grid.css
+++ b/mobile_dev-starter/styles/grid.css
@@ -3,9 +3,40 @@
 .gallery {
   /* GRID LAYOUT HERE */
   display: grid;
+  grid-template-columns: auto;
+  gap: 10px;
+  justify-content: space-evenly;
+  row-gap: 2px;
+}
+.gallery img {
+  width: 100%;
+  height: auto;
 }
 
-/* Tablet (≥601px) */
 
+/* Tablet (≥601px) */
+@media screen  and (min-width: 601px) {
+  
+  .gallery {
+    grid-template-columns: auto auto;
+  }
+  .gallery img {
+    width: 100%;
+    height: 330px;
+  }
+
+} 
 
 /* Desktop (≥1025px) */
+@media screen and (min-width: 1025px) {
+  
+  .gallery {
+    grid-template-columns: auto auto auto;
+  }
+  .gallery img {
+    width: 100%;
+    height: 330px;
+  }
+  
+}
+
